--- a/style.css
+++ b/style.css
@@ -47,3 +47,16 @@ body {
 .main-table thead tr:nth-child(2) {
   background-color: gainsboro;
 }
+
+.secondary-table {
+  border-collapse: collapse;
+  margin: 10px auto;
+}
+.secondary-table thead tr:nth-child(3) {
+  background-color: gainsboro;
+}
+
+.main-table,
+.secondary-table tr td:nth-child(1) {
+  text-align: center;
+}
