--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ body {
   margin: 0 auto;
 }
 .main-table thead tr:nth-child(2) {
-  background-color: #ebebeb;
+  background-color: #dbdbdb;
 }
 
 .secondary-table {
@@ -48,7 +48,7 @@ body {
   margin: 10px auto;
 }
 .secondary-table thead tr:nth-child(3) {
-  background-color: #ebebeb;
+  background-color: #dbdbdb;
 }
 
 .main-table,
