--- a/style.css
+++ b/style.css
@@ -39,21 +39,21 @@ body {
   border-collapse: collapse;
   margin: 0 auto;
 }
-.main-table thead tr:nth-child(2) {
-  background-color: #dbdbdb;
-}
-
 .secondary-table {
   border-collapse: collapse;
   margin: 10px auto;
+}
+
+.main-table thead tr:nth-child(2) {
+  background-color: #dbdbdb;
 }
 .secondary-table thead tr:nth-child(3) {
   background-color: #dbdbdb;
 }
 
-.main-table,
-.secondary-table tr td:nth-child(1) {
-  text-align: center;
+.main-table tbody tr td,
+.secondary-table tbody tr td {
+  text-align: left;
 }
 
 footer {
